# ChangeLog for dev-php5/ZendFramework
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.70 2010/12/28 21:59:43 ranger Exp $

  28 Dec 2010; Brent Baude <ranger@gentoo.org> ZendFramework-1.10.7.ebuild:
  stable ppc64, bug 346447

  22 Dec 2010; Markos Chandras <hwoarang@gentoo.org>
  ZendFramework-1.10.7.ebuild:
  Stable on amd64 wrt bug #346447

*ZendFramework-1.11.0 (05 Dec 2010)

  05 Dec 2010; <gurligebis@gentoo.org> +ZendFramework-1.11.0.ebuild:
  Bumping to 1.11.0

*ZendFramework-1.10.7 (14 Aug 2010)

  14 Aug 2010; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-1.8.3.ebuild, -ZendFramework-1.9.7.ebuild,
  -ZendFramework-1.10.3.ebuild, +ZendFramework-1.10.7.ebuild:
  Bumping to 1.10.7 and removing old unstable versions.

*ZendFramework-1.10.3 (03 Apr 2010)

  03 Apr 2010; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-1.10.2.ebuild, +ZendFramework-1.10.3.ebuild:
  Bumping to 1.10.3, fixing bug #312715

  02 Mar 2010; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  ZendFramework-1.7.5.ebuild, ZendFramework-1.8.3.ebuild,
  -ZendFramework-1.9.2.ebuild, -ZendFramework-1.9.2-r1.ebuild,
  -ZendFramework-1.9.6.ebuild, ZendFramework-1.9.7.ebuild,
  -ZendFramework-1.10.0.ebuild, -ZendFramework-1.10.1.ebuild,
  ZendFramework-1.10.2.ebuild:
  Removing old versions and fixing spelling error - bug #284314

  02 Mar 2010; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  ZendFramework-1.7.5.ebuild, ZendFramework-1.8.3.ebuild,
  ZendFramework-1.9.2.ebuild, ZendFramework-1.9.2-r1.ebuild,
  ZendFramework-1.9.6.ebuild, ZendFramework-1.9.7.ebuild,
  ZendFramework-1.10.0.ebuild, ZendFramework-1.10.1.ebuild,
  ZendFramework-1.10.2.ebuild:
  Fixing spelling error - bug #284314

*ZendFramework-1.10.2 (02 Mar 2010)

  02 Mar 2010; Ben de Groot <yngwin@gentoo.org>
  +ZendFramework-1.10.2.ebuild:
  Version bump

*ZendFramework-1.10.1 (12 Feb 2010)
