@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST ZendFramework-1.10.7-apidoc.tar.gz 7411414 RMD160 c16922f034d92a2a685ea6eba66a9447cc7a4570 SHA1 5070aed2af856c668040bcf14b24d9cd40908c53 SHA256 8484fdb8dcb5b505547bcfc0cbd763a8c515ad45113f04178e91c0ffeb29fae9
 DIST ZendFramework-1.10.7-manual-en.tar.gz 3340442 RMD160 352ec26314f01d0cd8c95d61e0b3a89c3dd832b2 SHA1 3f59c41dada9e8ff6b28739398bce2253e6c2117 SHA256 83b7e2a42937c769fb4d9fb2c7681364f10ee5c84defed4315250b165ca9f6b8
 DIST ZendFramework-1.10.7-minimal.tar.gz 3609724 RMD160 3ea5bb8cb5814efbf0d971802ba06520694a2722 SHA1 afe4bcd5acec4060907f8a51b6d1ab25ee62db22 SHA256 11f04c024e524b6396df1de2b7d3221ab5666a284b3056c5ead4bdc994d268a5
@@ -10,8 +13,15 @@ DIST ZendFramework-1.7.5-apidoc.tar.gz 4907260 RMD160 684773c9314361495c079a005b
 DIST ZendFramework-1.7.5-manual-en.tar.gz 1194554 RMD160 2354f57a18e6803f75a0fb2f3e48380cd664e480 SHA1 a10455cca14bad3848019369cdcf5d1db0ee1dc7 SHA256 2fab39b3b5e30c66d44e9ec5e4b88fef48a627fb2259aad58d555a3cdeabbb73
 DIST ZendFramework-1.7.5-minimal.tar.gz 2578136 RMD160 0d0371a7fdb1ce84390ec54b0f2f5478305261df SHA1 118f511b039a9f2cac2d68064392de3af544f4a8 SHA256 d74455ac522bc1e15a206b95c4571e2c3b41a4a33c2020a9252fab5fbdcb8a8b
 DIST ZendFramework-1.7.5.tar.gz 21238396 RMD160 147572e320d851ba2118e4a0f924cda7066bb02a SHA1 3a719ab49d7d200585eda2638bcb8eedd5d07788 SHA256 16559635e591af04f01ea66a2ad98dbdd39c75a890f4301611517b799916c62f
-EBUILD ZendFramework-1.10.7.ebuild 2032 RMD160 c7d31baf7b3c6e3f8827082f7d229be164454fd5 SHA1 0c38196235824185cdc4a5f0e840dbb86799132e SHA256 a575f0fb55f169ccdf970d3d29fe64b0754b1ddc9203bd0cdd1c98492e8b41f0
+EBUILD ZendFramework-1.10.7.ebuild 2031 RMD160 be5020ce2304c094e7fb8d7cc4fc7e646249087f SHA1 ea0cce4cd47abf41ce5fdcd855e8e1057da9a243 SHA256 e4dd7f4471e5d1bfde75451e14feef1ebfe94390fc7c66858d4de7b4e214bcc6
 EBUILD ZendFramework-1.11.0.ebuild 2038 RMD160 ade560f58de72c65053505392e4848cd248dc6cb SHA1 6584c3cc27472a71bce73f09e553ab99c8f0399d SHA256 b21027f96f94c3fa9358d1ad8d5c672ff70654abcdd46d0f64ba74c7a52c69b6
 EBUILD ZendFramework-1.7.5.ebuild 1726 RMD160 8572dd3c34ad5e3350f67fd8dedd2b08783a8a30 SHA1 646af04650c329088c638c8f49eea08ad4e95c97 SHA256 d6174edfaa8fa86bd0eec35452fc250217dc7645c20aeee0d90b02501cb443f9
-MISC ChangeLog 11838 RMD160 3557d771b85bd2e76a4dca773cd4653e07d6ef38 SHA1 902840161aa7aa0748b031a6d5331cc70b4d4330 SHA256 fcef7dfe8c54aeab8d0f83806dda129606fcf5c1813ca53efb846599f4fee89e
+MISC ChangeLog 11942 RMD160 5af87d5f57d5d490c49a4fabec80814c017231f1 SHA1 c81d7e830d2963ac3b9c9a9f4054aacafcbe342e SHA256 f549b4dcf5ca6ff9d232530df6f1548818aee289402b9aac5e6523c010186798
 MISC metadata.xml 523 RMD160 129ba00df70b4e9d7ccb7b8dc828e9406f9e312d SHA1 f5e9925403974e649a44402617249bb9dcc34f92 SHA256 ea4383a6e685b9e68b44e3edf3494439ecaf4ac56e4bf1bc3cd5dd5c6427ccec
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iEYEARECAAYFAk0s0mYACgkQkKaRLQcq0GKQ6gCeJunb3Q0DbezEjxCxAsZYFJTQ
+DNUAoJ2nhIMdyWWSLORpNjgI7Li18Khn
+=L4ii
+-----END PGP SIGNATURE-----
