@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ZendFramework-1.10.7.ebuild,v 1.3 2010/12/28 21:59:43 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ZendFramework-1.10.7.ebuild,v 1.4 2011/01/11 21:58:27 maekke Exp $
 
 EAPI="2"
 
@@ -8,7 +8,7 @@ PHP_LIB_NAME="Zend"
 
 inherit php-lib-r1
 
-KEYWORDS="amd64 ~hppa ~ppc ppc64 ~x86"
+KEYWORDS="amd64 ~hppa ~ppc ppc64 x86"
 
 DESCRIPTION="Zend Framework is a high quality and open source framework for developing Web Applications."
 HOMEPAGE="http://framework.zend.com/"
